<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/l_container_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/global_padding_horizontal"
            android:paddingTop="@dimen/global_padding_vertical"
            android:paddingRight="@dimen/global_padding_horizontal"
            android:paddingBottom="@dimen/global_padding_vertical">

            <EditText
                android:id="@+id/et_add_edit_product_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_edit_product_title_hint"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_add_edit_product_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/add_edit_product_title_quantity"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/et_add_edit_product_unit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/add_edit_product_title_unit"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1" />
            </LinearLayout>

            <EditText
                android:id="@+id/et_add_edit_product_description"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:gravity="top"
                android:hint="@string/add_edit_product_description_hint"
                android:inputType="textMultiLine" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_no_product_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/no_product"
            android:visibility="gone" />
    </RelativeLayout>
</ScrollView>