...
        android:id="@+id/l_container_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_product_detail_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

        <LinearLayout
            android:layout_width="match_parent"
...
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/global_padding_horizontal"
            android:layout_marginLeft="@dimen/global_padding_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_product_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                tools:text="Title" />

            <LinearLayout
...
